--- a/stylep.css
+++ b/stylep.css
@@ -3,7 +3,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -49,7 +50,9 @@ nav {
   background-color: black;
   height: 75px;
   display: fixed;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .mobile-hero {
@@ -130,16 +133,21 @@ main {
 }
 
 .gallery {
+  display: -ms-grid;
   display: grid;
   gap: 1em;
-  grid-template-rows: 3fr;
-  grid-template-columns: repeat(1, 1fr);
+  -ms-grid-rows: 3fr;
+      grid-template-rows: 3fr;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
 }
 
 @media (min-width: 36em) {
   .gallery {
-    grid-template-rows: 1fr;
-    grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -192,7 +200,8 @@ footer p {
 }
 
 #cookies {
-  box-shadow: #959da533 0 0.5em 1.5em;
+  -webkit-box-shadow: #959da533 0 0.5em 1.5em;
+          box-shadow: #959da533 0 0.5em 1.5em;
   padding: 15px;
   border-radius: 10px;
   background-color: white;
@@ -200,7 +209,8 @@ footer p {
 
 @media (prefers-color-scheme: dark) {
   #cookies {
-    box-shadow: #00000033 0 0.5em 1.5em;
+    -webkit-box-shadow: #00000033 0 0.5em 1.5em;
+            box-shadow: #00000033 0 0.5em 1.5em;
   }
 }
 
