--- a/admin/editor/style.css
+++ b/admin/editor/style.css
@@ -4,7 +4,8 @@
   display: inline;
   position: fixed;
   background-color: white;
-  box-shadow: black;
+  -webkit-box-shadow: black;
+          box-shadow: black;
   left: 0;
   top: 0;
   width: 100%;
@@ -19,7 +20,8 @@
   margin-top: 5%;
   color: black;
   background-color: white;
-  box-shadow: black;
+  -webkit-box-shadow: black;
+          box-shadow: black;
   padding: 40px;
   width: 1000px;
   height: 1400px;
@@ -34,7 +36,8 @@
   left: 10px;
   bottom: 10px;
   background-color: white;
-  box-shadow: black;
+  -webkit-box-shadow: black;
+          box-shadow: black;
   border-radius: 5px;
   padding: 10px;
   width: 50px;
