--- a/invoice/style.css
+++ b/invoice/style.css
@@ -226,3 +226,12 @@ input:focus {
   float: left;
   width: 30%;
 }
+
+#aside-number {
+  width: 35px;
+  height: 35px;
+  padding: 10px;
+  -webkit-appearance: none;
+  margin: 0;
+  -moz-appearance: textfield;
+}
