--- a/invoice/style.css
+++ b/invoice/style.css
@@ -227,10 +227,23 @@ input:focus {
   width: 30%;
 }
 
-#aside-number {
-  width: 35px;
+[data-input="number"] {
+  width: 50px;
   height: 35px;
   padding: 10px;
+  margin: 25px;
+  text-align: center;
+  -webkit-appearance: none;
+  margin: 0;
+  -moz-appearance: textfield;
+}
+
+[data-input="due"] {
+  width: 125px;
+  height: 35px;
+  padding: 10px;
+  margin: 25px;
+  text-align: center;
   -webkit-appearance: none;
   margin: 0;
   -moz-appearance: textfield;
