update invoice/index.html, style.css and style.scss

--- a/invoice/style.css
+++ b/invoice/style.css
@@ -153,6 +153,9 @@ input:focus {
   body * {
     visibility: none;
   }
+  aside {
+    display: none;
+  }
   #invoice,
   #invoice * {
     visibility: visible;
