--- a/invoice/style.scss
+++ b/invoice/style.scss
@@ -153,6 +153,10 @@ input:focus {
     visibility: none;
   }
 
+  aside {
+    display: none;
+  }
+
   #invoice,
   #invoice * {
     visibility: visible;
